--- a/scr/parameters.cfg
+++ b/scr/parameters.cfg
@@ -1,3 +1,4 @@
 [downloadCSVRTD]
-IPAdataseturl = https://indicepa.gov.it/ipa-dati/datastore/dump/41553dea-0701-429e-b906-8b71e441a281
+IPADatasetURL = https://indicepa.gov.it/ipa-dati/datastore/dump/41553dea-0701-429e-b906-8b71e441a281
+datasetLocation = ./resource/IPAdatsetRTD.csv
 
