--- a/scr/parameters.cfg
+++ b/scr/parameters.cfg
@@ -1,4 +1,5 @@
 [downloadCSVRTD]
-IPADatasetURL = https://indicepa.gov.it/ipa-dati/datastore/dump/41553dea-0701-429e-b906-8b71e441a281
-datasetLocation = ./resource/IPAdatsetRTD.csv
+ipadataseturl = https://indicepa.gov.it/ipa-dati/datastore/dump/41553dea-0701-429e-b906-8b71e441a281
+datasetlocation = ./resource/IPAdatsetRTD.csv
+updatetime = 2022-11-18
 
