add mail listener

--- a/src/parameters.cfg
+++ b/src/parameters.cfg
@@ -3,3 +3,11 @@ ipadataseturl = https://indicepa.gov.it/ipa-dati/datastore/dump/41553dea-0701-42
 datasetlocation = ./resource/IPAdatsetRTD.csv
 updatetime = 2022-10-21
 
+
+[pec]
+host = mbox.cert.legalmail.it
+port = 993
+user = modi-governance@pec.agid.gov.it
+
+[notification]
+receiptList = giacomo.iacuaniello@gmail.com, giacomo.iacuaniello@agid.gov.it
