completed mail fetch and add ipa dataset download

--- a/src/parameters.cfg
+++ b/src/parameters.cfg
@@ -1,8 +1,7 @@
 [downloadCSVRTD]
 ipadataseturl = https://indicepa.gov.it/ipa-dati/datastore/dump/41553dea-0701-429e-b906-8b71e441a281
-datasetlocation = ./resource/IPAdatsetRTD.csv
-updatetime = 2022-10-21
-
+datasetlocation = ../resource/IPAdatsetRTD.csv
+updatetime = 2022-11-28
 
 [pec]
 host = mbox.cert.legalmail.it
@@ -10,4 +9,9 @@ port = 993
 user = modi-governance@pec.agid.gov.it
 
 [notification]
-receiptList = giacomo.iacuaniello@gmail.com, giacomo.iacuaniello@agid.gov.it
+receiptlist = giacomo.iacuaniello@gmail.com, giacomo.iacuaniello@agid.gov.it
+
+[template]
+template_ok = mail ok
+template_ko = mail ko
+
