complete send reply and notify

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -1,16 +1,14 @@
 [ipa_rtd]
 ipa_dataset_url = https://indicepa.gov.it/ipa-dati/datastore/dump/41553dea-0701-429e-b906-8b71e441a281
 dataset_location = resource/IPAdatsetRTD.csv
-update_time = 2022-11-28
+update_time = 2022-12-05
 fake_rtd = giacomo.iacuaniello@pec.it
 
-[pec]
+[mailer]
 imap_host = mbox.cert.legalmail.it
 imap_port = 993
 smtp_host = sendm.cert.legalmail.it
 smtp_port = 465
 user = modi-governance@pec.agid.gov.it
-
-[notification]
-receipt_list = giacomo.iacuaniello@gmail.com, giacomo.iacuaniello@agid.gov.it, vincenzo.travascio@agid.gov.it
+notify_receipt_list = giacomo.iacuaniello@gmail.com, giacomo.iacuaniello@agid.gov.it, vincenzo.travascio@agid.gov.it
 
