add supporto to discard already sended reply

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -1,7 +1,7 @@
 [ipa_rtd]
 ipa_dataset_url = https://indicepa.gov.it/ipa-dati/datastore/dump/41553dea-0701-429e-b906-8b71e441a281
 dataset_location = resource/IPAdatsetRTD.csv
-update_time = 2022-12-05
+update_time = 2022-12-09
 fake_rtd = giacomo.iacuaniello@pec.it
 
 [mailer]
@@ -11,4 +11,5 @@ smtp_host = sendm.cert.legalmail.it
 smtp_port = 465
 user = modi-governance@pec.agid.gov.it
 notify_receipt_list = giacomo.iacuaniello@gmail.com, giacomo.iacuaniello@agid.gov.it, vincenzo.travascio@agid.gov.it
+message_worked_location = resource/message_worked.txt
 
