--- a/parameters.cfg
+++ b/parameters.cfg
@@ -1,7 +1,7 @@
 [ipa_rtd]
 ipa_dataset_url = https://indicepa.gov.it/ipa-dati/datastore/dump/41553dea-0701-429e-b906-8b71e441a281
 dataset_location = resource/IPAdatsetRTD.csv
-update_time = 2022-12-09
+update_time = 2023-03-13
 fake_rtd = giacomo.iacuaniello@pec.it
 
 [mailer]
@@ -10,6 +10,6 @@ imap_port = 993
 smtp_host = sendm.cert.legalmail.it
 smtp_port = 465
 user = modi-governance@pec.agid.gov.it
-notify_receipt_list = giacomo.iacuaniello@gmail.com, giacomo.iacuaniello@agid.gov.it, vincenzo.travascio@agid.gov.it
+notify_receipt_list = giacomo.iacuaniello@agid.gov.it, vincenzo.travascio@agid.gov.it
 message_worked_location = resource/message_worked.txt
 
